# cPanel_self-migration

./: .editorconfig  .gitignore  AGENTS.md  LICENSE  Makefile  README.md  codecov.yml  dns_verify_report.md  go.mod  install.sh
.claude/: CLAUDE.md  (+1 more)
migration-platform/apps/api/: Dockerfile  alembic.ini  pyproject.toml
migration-platform/apps/api/alembic/: env.py
migration-platform/apps/api/alembic/versions/: 0001_initial.py  0002_endpoints.py  0003_inventory_snapshots.py  0004_comparison_reports.py  0004_comparison_tasks.py  0005_endpoint_auth_secret.py  0005_migration_plans.py  0006_endpoint_verify_tls.py  0006_execution_runs.py  0007_migration_plans.py  0007_writer_readiness.py  0008_execution_attempts.py  0008_migration_executions.py  0009_account_leases.py  0009_endpoint_ssh_auth.py  0010_email_write_backups.py  0010_execution_attempts.py  0011_domain_write_journal.py  0011_endpoint_ssh_host_key.py  0012_email_write_journal.py  0013_email_write_identity_digest.py
migration-platform/apps/api/app/: __init__.py  main.py
migration-platform/apps/api/app/core/: config.py  credentials.py  error_handlers.py  errors.py  queue.py
migration-platform/apps/api/app/db/: base.py  session.py
migration-platform/apps/api/app/modules/comparison/: __init__.py  engine.py  models.py  router.py  schemas.py  service.py
migration-platform/apps/api/app/modules/endpoints/: __init__.py  mock_connection.py  models.py  router.py  schemas.py  service.py
migration-platform/apps/api/app/tests/: conftest.py  test_alembic_env.py  test_app_204_hardening.py  test_autoresponder_inventory.py  test_autoresponder_writer.py  test_bounded_process.py  test_comparison.py  test_comparison_api.py  test_comparison_engine.py  test_core_errors_decoupled.py  test_cpanel_client.py  test_cpanel_client_hardening.py  test_credentials.py  test_cron_writer.py  test_crypto.py  test_database_writer.py  test_default_address_contract.py  test_dest_mailbox_state_probe.py  test_dispatch_completed_validation.py  test_dispatch_domain_lifecycle.py  test_dispatch_email_wiring.py  test_dns_inventory.py  test_dns_writer.py  test_domain_inventory_contract.py  test_domain_journal_crash.py  test_domain_recovery.py  test_domain_recovery_classify.py  test_domain_rules.py  test_domain_writer.py  test_email_autoresponder_contract.py  test_email_backup_store.py  test_email_categories_pipeline.py  test_email_category_runtime.py  test_email_digest_capability_parser.py  test_email_filter_contract.py  test_email_identity_digest.py  test_email_identity_smoke.py  test_email_identity_strategy.py  test_email_journal_crash.py  test_email_phase_registry.py  (+57 more)
migration-platform/apps/worker/: Dockerfile  pyproject.toml
migration-platform/apps/worker/worker/: __init__.py  broker.py  db.py  execution_bridge.py  lease.py  main.py  ssh_runtime.py
migration-platform/apps/worker/worker/actors/: autoresponder_writer.py  cron_writer.py  database_writer.py  dns_writer.py  domain_writer.py  forwarder_writer.py  ftp_writer.py  health.py  mailing_list_writer.py  mock_orchestrator.py  mysql_user_writer.py  preflight.py  real_dispatch.py
migration-platform/apps/worker/worker/tests/: conftest.py  fake_executor.py  test_actors.py  test_execution_bridge.py  test_inventory.py  test_lease.py  test_preflight.py  test_ssh_runtime.py  test_ssh_runtime_pg.py  test_token_preflight.py
(+873 files in other folders)
