[project]
name = "migration-platform-api"
version = "0.1.0"
description = "FastAPI backend for the migration platform (Sprint 0)."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.1",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    # Producer side of the preflight queue (declares the run_preflight actor
    # and enqueues to Redis). The worker owns the consumer implementation.
    "dramatiq[redis]>=1.16",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["app/tests"]
addopts = "-q"
