[project]
name = "migration-platform-worker"
version = "0.1.0"
description = "Dramatiq worker for the migration platform (Sprint 0)."
requires-python = ">=3.11"
dependencies = [
    "dramatiq[redis]>=1.16",
    "redis>=5.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["worker*"]

[tool.pytest.ini_options]
testpaths = ["worker/tests"]
addopts = "-q"
