[project]
name = "migration-platform-worker"
version = "0.1.0"
description = "Dramatiq worker for the migration platform (read-only preflight)."
requires-python = ">=3.11"
dependencies = [
    "dramatiq[redis]>=1.16",
    "redis>=5.0",
    # The worker owns a minimal DB layer to update jobs/job_events in Postgres.
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
    # Sprint 2: read-only cPanel inventory via the shared adapters package
    # (installed from packages/adapters — see the Dockerfile / dev setup).
    "httpx>=0.27",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["worker*"]

[tool.pytest.ini_options]
testpaths = ["worker/tests"]
addopts = "-q"
