[project]
name = "migration-platform-worker"
version = "0.1.0"
description = "Dramatiq worker for the migration platform (Sprint 0)."
requires-python = ">=3.11"
dependencies = [
    "dramatiq[redis]>=1.16",
    "redis>=5.0",
    "sqlalchemy>=2.0",
]

# The worker actors import the API package (`app.*`) lazily inside their
# execute bodies, so `pip install -e apps/worker[test]` alone lets the tests
# collect and pass. A full local run that also exercises actor bodies requires
# the sibling packages installed editable — see `make setup` and the README
# "Sviluppo locale" section for the single reproducible workflow.
[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["worker*"]

[tool.pytest.ini_options]
testpaths = ["worker/tests"]
addopts = "-q"
